app/themes/addiction/css/custom.css
/* ... */
.modal-dialog ul{
  max-height: 70vh;
}
.two_columns.county_negative_two ul{
  width:400px;
}
html {
    overflow-y:scroll;
}
.wp-flybox_tab.call_us { background: #2172a7; }

.wp-flybox_tab.call_us p { color: white; }
.btn.modal_btn {
    color: white;
}
.wp-flybox_tab.call_us {
    display: none !important;
}
a:focus {
    outline: none;
}
.text-left {
    text-align: left !important;
}
.modal.treatment_center_class.ng-scope.ng-isolate-scope.in .modal-dialog {
    margin-top: 15%;
    width:450px;
}
.small_button{
  min-width:50px !important;
}
#category_step4 ul{
  min-width: 120px !important;
}
a.thumbnail img {
    max-height: 88px;
}
.state-full-name{
  font-size:24px;
}
.profile-nav-list li img{
  max-width:200px;
}
.center-logo-in-tb{
  max-width:120px !important;
  max-height:70px !important;
}
.hide_blank{
  display:none !important;
}
.remove_margin{
  margin:0px !important;
}
#no-more-tables ul li a {
  margin:0px !important;
}
.margin-top-less{
  margin-top:5px;
}
.center-detail-contact-info-row img {
    max-width: 200px;
}
.state_size{
  font-size:20px;
}
.adn-row p.help-block {
    padding: 0px 0 0 0;
    font-size: 13px;
    color: #d50000 !important;
}
.adn-row p.help-block::before {
    content:'*';
}
.membership_profile{
  height:0px;margin-top:-1px;
}
.nopadding{
  padding:0px;
}
.hide_emit_message{
  display:block !important;
}
.show_emit_message{
  display:none !important;
}
#payment{
  margin-left: 10%;
}
#treatmentApproach{
  margin-left: 6.5%;
}
#additionalServices{
  margin-left:-5%;
}

/*

RESPONSTABLE 2.0 by jordyvanraaij
  Designed mobile first!

If you like this solution, you might also want to check out the 1.0 version:
  https://gist.github.com/jordyvanraaij/9069194

*/
.responstable {
  margin: 1em 0;
  width: 100%;
  overflow: hidden;
  background: #FFF;
  color: #024457;
  border-radius: 10px;
  border: 1px solid #167F92;
}
.responstable tr {
  border: 1px solid #D9E4E6;
}
.responstable tr:nth-child(odd) {
  background-color: #EAF3F3;
}
.responstable th {
  display: none;
  border: 1px solid #FFF;
  background-color: #167F92;
  color: #FFF;
  padding: 1em;
}
.responstable th:first-child {
  display: table-cell;
  text-align: center;
}
.responstable th:nth-child(2) {
  display: table-cell;
}
.responstable th:nth-child(2) span {
  display: none;
}
.responstable th:nth-child(2):after {
  content: attr(data-th);
}
@media (min-width: 480px) {
  .responstable th:nth-child(2) span {
    display: block;
  }
  .responstable th:nth-child(2):after {
    display: none;
  }
}
.responstable td {
  display: block;
  word-wrap: break-word;
  max-width: 7em;
}
.responstable td:first-child {
  display: table-cell;
  text-align: center;
  border-right: 1px solid #D9E4E6;
}
@media (min-width: 480px) {
  .responstable td {
    border: 1px solid #D9E4E6;
  }
}
.responstable th, .responstable td {
  text-align: left;
  margin: .5em 1em;
}
@media (min-width: 480px) {
  .responstable th, .responstable td {
    display: table-cell;
    padding: 1em;
  }
}

body {
  padding: 0 2em;
  font-family: Arial, sans-serif;
  color: #024457;
  background: #f2f2f2;
}

h1 {
  font-family: Verdana;
  font-weight: normal;
  color: #024457;
}
h1 span {
  color: #167F92;
}
body{
  background: white;
}
.panel-footer{
  margin-top:10px;
  margin-bottom:10px;
}
div#byDrug {
    margin-left: 4%;
}

